log
sá., 17 de may. de 2025  1:50:48: 
 tests:  0|5
total_score: 0/70
3f0e54c
sá., 17 de may. de 2025  1:54:24: 
 sudoku.c | 11 +++++++++++
 1 file changed, 11 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:55:17: error: unused variable 'col' [-Werror=unused-variable]
   int row = -1, col = -1;
                 ^~~
cc1.exe: all warnings being treated as errors
f1bf933
sá., 17 de may. de 2025  1:54:45: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: unused variable 'col' [-Werror=unused-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
8d13d34
sá., 17 de may. de 2025  1:55:51: 
 sudoku.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:56:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
51da75e
sá., 17 de may. de 2025  1:58:54: 
 sudoku.c | 8 ++++++++
 1 file changed, 8 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:11: error: unused variable 'k' [-Werror=unused-variable]
   int i,j,k;
           ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:64:7: error: variable 'col' set but not used [-Werror=unused-but-set-variable]
   int col = -1;
       ^~~
cc1.exe: all warnings being treated as errors
ee9a5c2
sá., 17 de may. de 2025 12:13:00: 
 sudoku.c | 7 +++++++
 1 file changed, 7 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:47:13: error: unused variable 'k' [-Werror=unused-variable]
   int i, j, k;
             ^
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
f1aa008
sá., 17 de may. de 2025 12:13:17: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'get_adj_nodes':
sudoku.c:79:5: error: implicit declaration of function 'pushback' [-Werror=implicit-function-declaration]
     pushback(list, new_node);
     ^~~~~~~~
cc1.exe: all warnings being treated as errors
ae6e02c
sá., 17 de may. de 2025 12:14:02: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
476d096
sá., 17 de may. de 2025 12:27:13: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  5|3
total_score: 35/70
666add7
sá., 17 de may. de 2025 12:29:24: 
 sudoku.c | 3 +--
 1 file changed, 1 insertion(+), 2 deletions(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'seen' [-Werror=unused-variable]
     int seen[10] = {0};
         ^~~~
cc1.exe: all warnings being treated as errors
c4e6d5a
sá., 17 de may. de 2025 12:29:39: 
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:50:9: error: unused variable 'seen' [-Werror=unused-variable]
     int seen[10] = {0};
         ^~~~
cc1.exe: all warnings being treated as errors
2e39005
sá., 17 de may. de 2025 12:48:39: 
 sudoku.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
7b48f6e
sá., 17 de may. de 2025 12:56:03: 
 sudoku.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:61:11: error: unused variable 'seen' [-Werror=unused-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
cbc7c9d
sá., 17 de may. de 2025 12:56:51: 
 sudoku.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:64:14: error: 'val' undeclared (first use in this function)
           if(val!=0){
              ^~~
sudoku.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:61:11: error: variable 'seen' set but not used [-Werror=unused-but-set-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
1afa840
sá., 17 de may. de 2025 14:08:50: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
Compilation failed
In file included from test.c:5:0:
sudoku.c: In function 'is_valid':
sudoku.c:67:14: error: 'val' undeclared (first use in this function)
           if(val!=0){
              ^~~
sudoku.c:67:14: note: each undeclared identifier is reported only once for each function it appears in
sudoku.c:65:15: error: unused variable 'col' [-Werror=unused-variable]
           int col = block_j * 3 + j;
               ^~~
sudoku.c:64:15: error: unused variable 'row' [-Werror=unused-variable]
           int row = block_i * 3 + i;
               ^~~
sudoku.c:61:11: error: variable 'seen' set but not used [-Werror=unused-but-set-variable]
       int seen[10] = {0};
           ^~~~
cc1.exe: all warnings being treated as errors
585072a
sá., 17 de may. de 2025 14:27:22: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|3
total_score: 35/70
d7a8e4e
